examples/test/testpolicy7713.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7713
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key13: value42
      key0: value14
      key23: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value32
          key5: value2
          key30: value13
      podSelector:
        matchLabels:
          key2: value39
          key6: value44
